@@ -18,8 +18,8 @@ public enum CommonEnotValueType implements EnotValueType {
     INTEGER("integer", Collections.emptySet(), true, new IntegerToBinaryConverter()),
     TEXT("text", Collections.emptySet(), true, new TextToBinaryConverter()),
     PLACEHOLDER("placeholder", Collections.emptySet(), false, new UnsupportedToBinaryConverter()),
-    OBJECT_IDENTIFIER("object_identifier", Collections.emptySet(), false, new UnsupportedToBinaryConverter()),
-    DATE_TIME("date_time", Collections.emptySet(), false, new UnsupportedToBinaryConverter()),
+    OBJECT_IDENTIFIER("object_identifier", Set.of(TEXT), false, new UnsupportedToBinaryConverter()),
+    DATE_TIME("date_time", Set.of(TEXT), false, new UnsupportedToBinaryConverter()),
     ELEMENT("element", Collections.emptySet(), false, new UnsupportedToBinaryConverter()),
     EMPTY("empty", Collections.emptySet(), false, new EmptyToBinaryConverter());
 
